# llm-innovation-builder

./: README.md  TODO.md  pyproject.toml
baselines/internal_reference/: manifest.json
ideas/idea-0001/: idea_spec.json  ledger.jsonl  model.py  opencode_preview.json  status.json  train.py
ideas/idea-0001/config/: full.json  small.json  smoke.json
ideas/idea-0001/notes/: design.md
ideas/idea-0001/reports/: attempt-0001.json  attempt-0001.md
ideas/idea-0002/: environment.json  eval.py  idea_spec.json  model.py  opencode_preview.json  status.json  train.py
ideas/idea-0002/config/: full.json  small.json  smoke.json
ideas/idea-0002/notes/: design.md  orchestration.md
ideas/idea-0002/orchestration/: agents.json
ideas/idea-0003/: idea_spec.json  ledger.jsonl  model.py  opencode_preview.json  originality_review.json  status.json  train.py
ideas/idea-0003/config/: full.json  small.json  smoke.json
ideas/idea-0003/notes/: design.md  orchestration.md
ideas/idea-0003/orchestration/: agents.json  skill-decisions.md  skills.json
orchestration/: skills.json  synced-skills.json
src/auto_llm_innovator/: __init__.py  __main__.py  cli.py  constants.py  env.py  filesystem.py
tests/: conftest.py  test_baselines.py  test_cli.py  test_dataset_planning.py  test_design_ir.py  test_evaluation.py  test_generation.py  test_handoff.py  test_idea_spec.py  test_lifecycle.py  test_lineage.py  test_opencode.py  test_orchestration.py  test_phases.py  test_preflight.py  test_ranking.py  test_repair.py  test_resource_planning.py  test_runtime.py  test_skills.py
(+92 files in other folders)
